# mcx-hal

./: Cargo.toml  flake.nix
examples/mcxa153/: Cargo.toml
examples/mcxa346/: Cargo.toml
examples/mcxn947/: Cargo.toml  build.rs  memory.x
examples/mcxn947/.cargo/: config.toml
src/: lib.rs  lpuart.rs
src/port/: lpuart.rs  mod.rs
src/port/device/: n0.rs
src/scg/: firc.rs
src/syscon/: mod.rs  syscon_divider.rs
src/syscon/device/: a0.rs  a1.rs  n0.rs
