[package]
name = "mcxa153"
version = "0.1.0"
edition = "2024"

[dependencies]
mcx-hal = { path = "../../", features = ["rt", "mcxa153"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"

panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "1"
defmt = "0.3"
defmt-rtt = "0.4"
rtic = { version = "2.1.2", features = [ "thumbv8main-backend" ] }
rtic-monotonics = { version = "2.0.3", features = [ "cortex-m-systick" ] }

eio06 = { package = "embedded-io", version = "0.6" }
rtic-sync = "1.3.2"

